[project]
name = "plurality-collapse"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "praw>=7.7",
    "python-dotenv>=1.0",
    "datasets>=2.14",
    "openai>=1.0",
    "torch>=2.0",
    "transformers>=4.35",
    "numpy>=1.24",
    "scikit-learn>=1.1",
    "matplotlib>=3.7",
]

[tool.setuptools]
py-modules = ["fetch_comments", "filter_comments", "extract_embeddings", "analyze_embeddings", "robustness_checks", "cross_space_projection", "inspect_unexplained_variance", "inspect_llm_unexplained", "inspect_human_unexplained_tfidf", "consensus_stratification", "value_diversity_gradient"]
